feat(identity): add sign-in method changes
